Fix avatar alignment - add display block to remove baseline offset

--- a/styles.css
+++ b/styles.css
@@ -224,6 +224,7 @@ footer a {
   width: 32px;
   height: 32px;
   border-radius: 50%;
+  display: block;
 }
 
 /* Form styles */
